General improvements. (#41)
* Add bare minimum docs for Flogger Next.

* Snapshot to add Flogger Next stuff.

* Convert to new namepsace for Flogger Next.

* Update version and tidy.

* Flatten structure and fix links.

* Better install docs.

* Fixing table of contents layout.