@@ -4,16 +4,16 @@ title: "Next: String Templates"
 nav_order: 51
 ---
 
+<!-- @formatter:off -->
 # String Templates
+{: .no_toc }
 
-<details open markdown="block">
-  <summary>
-    Table of contents
-  </summary>
-  {: .text-delta }
+## Table of contents
+{: .no_toc .text-delta }
+
 - TOC
 {:toc}
-</details>
+<!-- @formatter:on -->
 
 ## Introduction
 
@@ -26,7 +26,7 @@ String message = "Add: x=\{ x } + y=\{ y }: x+y=\{ x + y }"
 ```
 <!-- @formatter:on -->
 
-For some use cases this can make code more readably compared to alternatives such as:
+For some use cases this can make code more readable, compared to alternatives such as:
 
 <!-- @formatter:off -->
 ```java
@@ -117,9 +117,40 @@ which is essential for Flogger.
 <!-- @formatter:off -->
 ```xml
 <dependency>
-    <groupId>net.goui.flogger.next</groupId>
-    <artifactId>logger</artifactId>
-    <version>${flogger-next.version}</version>
+  <groupId>net.goui.flogger.next</groupId>
+  <artifactId>logger</artifactId>
+  <version>${flogger-next.version}</version>
 </dependency>
+```
+<!-- @formatter:on -->
+
+Ensuring the JDK String Template mechanism is enabled (this step will eventually become
+unnecessary):
+
+<!-- @formatter:off -->
+```xml
+<build>
+  <pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+      ...
+    </plugins>
+  </pluginManagement>
+</build>
 ```
 <!-- @formatter:on -->
